--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
     border-radius: 10px;
     padding-left: 40px;
     padding-right: 40px;
-    width: fit-content;
+    width: 80;
     left: 50%;
     transform: translate(-50%);
     overflow: hidden;
@@ -35,7 +35,6 @@
 }
 .container{
     background-color: #1B1D1F;
-    width: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
